Correcting bad directory navigation